fix broken css links / classes in headers demo

--- a/js/headers/assets/css/custom.css
+++ b/js/headers/assets/css/custom.css
@@ -6,7 +6,7 @@
   * v 0.6.1.1 - July 7, 2013
   *
   * This framework is still and development.  If you have any suggestions/fixes/comments, please
-  * create an issue - https://github.com/bleachedgraphics/Brass-Tacks/issues 
+  * create an issue - https://github.com/bleachedgraphics/Brass-Tacks/issues
   * Thank you!
   *
   *******************************************************************************************************
@@ -178,77 +178,77 @@ nav a {
   nav a:hover {
     text-decoration: none; }
 
-.nav ul, .footer-Nav ul,
+.nav ul, .footer-nav ul,
 .nav ol,
-.footer-Nav ol {
+.footer-nav ol {
   border: 1px solid #ccc;
   padding: 4px; }
-.nav li, .footer-Nav li {
+.nav li, .footer-nav li {
   margin: 0; }
-.nav a, .footer-Nav a {
+.nav a, .footer-nav a {
   display: block;
   padding: 4px 8px;
   text-decoration: underline; }
-  .nav a:hover, .footer-Nav a:hover {
+  .nav a:hover, .footer-nav a:hover {
     text-decoration: none; }
 
-.h-Nav > li, .bread > li {
+.h-nav > li, .bread > li {
   float: left; }
 
-.c-Nav {
+.c-nav {
   font-size: 0;
   text-align: center; }
 
-.c-Nav > li, .ah-Nav a {
+.c-nav > li, .ah-nav a {
   display: inline-block;
   font-size: 16px; }
 
-.v-Nav a {
+.v-nav a {
   display: block; }
 
-.ah-Nav {
+.ah-nav {
   font-size: 0; }
 
-.fixed-Nav-Left {
+.fixed-nav-Left {
   padding-left: 200px; }
-  .fixed-Nav-Left .side-Nav-Fixed {
+  .fixed-nav-Left .side-nav-Fixed {
     left: 0; }
-  .fixed-Nav-Left .btn-Nav {
+  .fixed-nav-Left .btn-nav {
     left: 8px;
     top: 8px; }
 
-.fixed-Nav-Right {
+.fixed-nav-Right {
   padding-right: 200px; }
-  .fixed-Nav-Right .side-Nav-Fixed {
+  .fixed-nav-Right .side-nav-Fixed {
     right: 0; }
-  .fixed-Nav-Right .btn-Nav {
+  .fixed-nav-Right .btn-nav {
     right: 8px;
     top: 8px; }
 
-.fixed-Nav-Top {
+.fixed-nav-Top {
   padding-top: 100px; }
 
-.top-Nav-Fixed, .side-Nav-Fixed {
+.top-nav-Fixed, .side-nav-Fixed {
   background: #dc4732;
   position: fixed;
   top: 0;
   z-index: 1000; }
-  .top-Nav-Fixed a, .side-Nav-Fixed a {
+  .top-nav-Fixed a, .side-nav-Fixed a {
     color: white; }
-    .top-Nav-Fixed a:hover, .side-Nav-Fixed a:hover, .top-Nav-Fixed a:visited, .side-Nav-Fixed a:visited {
+    .top-nav-Fixed a:hover, .side-nav-Fixed a:hover, .top-nav-Fixed a:visited, .side-nav-Fixed a:visited {
       background: rgba(0, 0, 0, 0.6);
       color: #fff;
       text-decoration: none; }
 
-.top-Nav-Fixed {
+.top-nav-Fixed {
   height: 100px; }
 
-.side-Nav-Fixed {
+.side-nav-Fixed {
   height: 100%;
   overflow-y: auto;
   width: 200px; }
 
-.btn-Nav {
+.btn-nav {
   background: url(../img/nav-Icon.png) no-repeat center center;
   -moz-background-size: 75%;
   -ms-background-size: 75%;
@@ -264,8 +264,8 @@ nav a {
 /*
   Code Example
 
-<a class="btn btn-Nav" id="btn-Nav-1" href="#show-Nav">
-    <span class="hidden">Show Navigation</span>
+<a class="btn btn-nav" id="btn-nav-1" href="#show-nav">
+    <span class="hidden">Show navigation</span>
 </a>
 */
 body {
@@ -310,17 +310,17 @@ a {
 .header-Base {
   background: #fafafa; }
 
-.header-Nav {
+.header-nav {
   background: #f8f8f8;
   border-bottom: 1px solid #eee;
   border-top: 1px solid #eee;
   margin: 16px auto; }
-  .header-Nav a, .header-Nav a:visited {
+  .header-nav a, .header-nav a:visited {
     padding: 8px 12px;
     text-decoration: none; }
-    .header-Nav a:hover, .header-Nav a:visited:hover {
+    .header-nav a:hover, .header-nav a:visited:hover {
       background: #eee; }
-    .header-Nav a.selected, .header-Nav a:active, .header-Nav a:visited.selected, .header-Nav a:visited:active {
+    .header-nav a.selected, .header-nav a:active, .header-nav a:visited.selected, .header-nav a:visited:active {
       background: #ddd; }
 
 .content-Base {
@@ -337,9 +337,9 @@ a {
   background: #2d2d2d;
   color: #fff; }
 
-.footer-Nav a {
+.footer-nav a {
   /* add in project styling for footer a tags here */ }
-  .footer-Nav a:hover {
+  .footer-nav a:hover {
     /* add in project styling for a:hover here */ }
-  .footer-Nav a.selected {
+  .footer-nav a.selected {
     /* add in project styling for a.selected here */ }
