--- a/js/headers/assets/sass/headers.scss
+++ b/js/headers/assets/sass/headers.scss
@@ -3,7 +3,7 @@
 
 .h-pad {
   padding-top: 177px; }
-  @media (max-device-width: 480px), screen and (max-width: 820px) {
+  @media screen and (max-width: 820px) {
     .h-pad {
       padding-top: 147px; } }
 
@@ -16,7 +16,7 @@
   margin-top: 30px;
   position: relative;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3); }
-  @media (max-device-width: 480px), screen and (max-width: 820px) {
+  @media screen and (max-width: 820px) {
     .header-base, .header-fixed, .header-hide, .header-fixed-shrink {
       line-height: 1;
       font-size: 80%;
@@ -31,7 +31,7 @@
   top: 30px;
   width: 100%;
   z-index: 10; }
-  @media (max-device-width: 480px), screen and (max-width: 820px) {
+  @media screen and (max-width: 820px) {
     .header-fixed, .header-hide, .header-fixed-shrink {
       top: 0; } }
 
@@ -63,7 +63,7 @@
   .nav-container .c-nav {
     background: #6684ba;
     border-bottom: 1px solid #22437d; }
-    @media (max-device-width: 480px), screen and (max-width: 820px) {
+    @media screen and (max-width: 820px) {
       .nav-container .c-nav {
         -moz-transition: all 0.35s;
         -o-transition: all 0.35s;
@@ -72,16 +72,21 @@
         bottom: -400px;
         position: fixed;
         left: 0;
-        width: 100%; }
-        .nav-container .c-nav li {
-          display: block;
-          text-align: left; }
-          .nav-container .c-nav li a {
-            display: block; } }
+        width: 100%;
+      }
+      .nav-container .c-nav li {
+        display: block;
+        text-align: left;
+      }
+      .nav-container .c-nav li a {
+        display: block;
+      }
+    }
 
-@media (max-device-width: 480px), screen and (max-width: 820px) {
+@media screen and (max-width: 820px) {
   .slide-Up {
-    bottom: 0 !important; } }
+    bottom: 0 !important; }
+  }
 
 .btn-nav {
   background: url("img/nav-Icon.png") no-repeat scroll center center / 75% auto #6684ba;
@@ -91,13 +96,18 @@
     top: 4px;
     width: 28px;
   border: 1px solid #333;
-  display: none; }
-  @media (max-device-width: 480px), screen and (max-width: 820px) {
-    .btn-nav {
-      display: block; } }
+  display: none;
+}
+
+@media screen and (max-width: 820px) {
+  .btn-nav {
+    display: block;
+  }
+}
 
 .main {
   background: #fff;
   min-height: 800px;
   position: relative;
-  z-index: 5; }
+  z-index: 5;
+}
